Fixed navigation: restored desktop menu, hamburger menu only on mobile

--- a/styles.css
+++ b/styles.css
@@ -25,12 +25,10 @@ nav ul {
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    transition: all 0.3s ease-in-out;
 }
 
 nav ul li:first-child {
-    position: absolute;
-    left: 0;
+    margin-right: auto;
 }
 
 nav ul li:not(:first-child) {
@@ -402,14 +400,21 @@ h2 {
         position: absolute;
         right: 1rem;
         top: 1rem;
+        z-index: 1001;
     }
 
     nav ul {
         display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        background: white;
         flex-direction: column;
         width: 100%;
+        height: 100vh;
         text-align: center;
-        padding-top: 1rem;
+        padding-top: 4rem;
     }
 
     nav ul.active {
@@ -417,12 +422,16 @@ h2 {
     }
 
     nav ul li {
-        margin: 0.5rem 0;
-        width: 100%;
+        margin: 1rem 0;
     }
 
     nav ul li:first-child {
         margin-right: 0;
+        margin-bottom: 2rem;
+    }
+
+    body.menu-open {
+        overflow: hidden;
     }
 
     .hero-text {
